gcc/testsuite/rust/compile/issue-3874.rs
#![feature(no_core)]
#![no_core]

fn wow(){
    &#[serde]
} // { dg-error "found unexpected token .\}. in null denotation" "" { target *-*-* } . }
